--- a/audio/Cargo.toml
+++ b/audio/Cargo.toml
@@ -2,6 +2,7 @@
 name = "audio"
 version = "0.1.0"
 authors = ["Danny Fritz <dannyfritz@gmail.com>"]
+workspace = ".."
 edition = "2018"
 
 [dependencies]
